# QBHD

./: .gitignore  CHANGELOG.md  CLI_ENHANCEMENTS.md  CLI_QUICKREF.txt  DOCUMENTATION_UPDATE.md  FEATURES.md  FILE_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE1_COMPLETE.md  PHASE1_TASK1_SUMMARY.md  PHASE1_TASK2_SUMMARY.md  PHASE1_TASK3_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_TASK4_SUMMARY.md  PHASE3_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  README_QBHD.md  STATUS.md  TASK2_COMPLETE.md  USAGE_GUIDE.md  apply_cli_enhancements.sh  build.sh  build_compiler_only.sh  build_ide.sh  build_lsp.sh  build_qbhd.sh  enhance_cli.py  setup_lnx.sh  setup_win.cmd  strip_ide.py  test_cli_enhancements.sh  test_suite.py
.ci/: bootstrap.bat  bootstrap32.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
ide/: index.html  package.json
ide/src/: App.css  App.jsx
ide/src-tauri/: Cargo.toml  tauri.conf.json
internal/help/: $CHECKING.md  $CONSOLE.md  $ERROR.md  $EXEICON.md  $IF.md  $INCLUDE.md  $LET.md  $NOPREFIX.md  $RESIZE.md  $SCREENHIDE.md  $SCREENSHOW.md  $VERSIONINFO.md  &B.md  &H.md  ABS.md  ALIAS.md  ASC-(statement).md  ASC.md  ASCII.md  ATN.md  Alternative-circle-routine.md  Argument.md  Arrays.md  BEEP.md  BLOAD.md  BSAVE.md  Bitmaps.md  C-Libraries.md  CALL-ABSOLUTE.md  CALL.md  CHAIN.md  CHDIR.md  CIRCLE.md  CLEAR.md  CLOSE.md  CLS.md  COLOR.md  COMMON.md  (+265 more)
lsp/: Cargo.toml
lsp/src/: diagnostics.rs  document.rs  lexer.rs  main.rs  parser.rs  semantic.rs
nvim-qbhd/: README.md
source/: icon.rc  qb64.bas  qbhd_compiler.bas
(+9 files in other folders)
